--- a/product-service.yml
+++ b/product-service.yml
@@ -2,8 +2,14 @@ server:
   port: 8082
 
 spring:
+  application:
+    name: product-service
+  cloud:
+    config:
+      enabled: true
+      fail-fast: false
   datasource:
-    url: jdbc:postgresql://localhost:5432/productdb
+    url: jdbc:postgresql://postgres-product:5432/productdb
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -15,11 +21,14 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
+  web:
+    cors:
+      enabled: false
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://service-discovery:8761/eureka/
     fetch-registry: true
     register-with-eureka: true
   instance:
@@ -30,6 +39,7 @@ logging:
   level:
     com.microservices.productservice: DEBUG
     org.springframework.web: INFO
+    org.hibernate.SQL: DEBUG
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 
